--- a/WorldNomads.Test/WorldNomads.Test.csproj
+++ b/WorldNomads.Test/WorldNomads.Test.csproj
@@ -44,6 +44,7 @@
     <Compile Include="OddPositiveIntegerSequenceTest.cs" />
     <Compile Include="PositiveIntegerSequenceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SequenceFactoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
